bug fixes minor

--- a/style.css
+++ b/style.css
@@ -11,9 +11,9 @@ html, body {
     color: #1f2933;
 }
 
-#MainMenu, footer, header { 
+/*#MainMenu, footer, header { 
     visibility: hidden; 
-}
+}*/
 
 [data-testid="stAppViewContainer"] {
     background-color: #f4f6f8;
